<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/splashscreen_mobile">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@mipmap/influencerheader400"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="5sp"
        android:text="@string/copywrite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginBottom="7sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sbproduct" />


</RelativeLayout>
