<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Influencer_Registeration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


    <com.socialbeat.influencer.helper.MyViewPager
    android:id="@+id/viewPagerVertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout
        android:id="@+id/layout_sms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@mipmap/login_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:scaleType="fitXY"/>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".RegistrationScreen1"
                android:layout_marginTop="15sp"
                android:layout_centerHorizontal="true"
                android:id="@+id/relativeLayout"
                android:scaleType="fitXY">

                <ImageView

                    android:id="@+id/login_icon"
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="98dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:visibility="visible"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="REGISTRATION"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/login_icon"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:id="@+id/registration_title"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/registration_title"
                    android:id="@+id/relativeLayout1"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/transperent"
                    android:scaleType="fitXY">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Add Info to Create New Account"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/colorAccentnew"
                        android:gravity="center"
                        android:id="@+id/addinfo"
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:inputType="textPersonName|textCapWords"
                        android:hint="Name"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:paddingLeft="15dp"
                        android:singleLine="true"
                        android:ems="14"
                        android:gravity="left"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/addinfo"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_corner"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="14"
                        android:id="@+id/email"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:hint="Email ID"
                        android:singleLine="true"
                        android:gravity="left"
                        android:paddingLeft="15dp"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/name"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_corner"/>


                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="14"
                        android:id="@+id/mobile"
                        android:hint="Mobile No"
                        android:singleLine="true"
                        android:gravity="left"
                        android:paddingLeft="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/email"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_corner"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="14"
                        android:id="@+id/password"
                        android:hint="Password"
                        android:singleLine="true"
                        android:gravity="left"
                        android:paddingLeft="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/mobile"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_corner"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="14"
                        android:id="@+id/confirmpassword"
                        android:hint="Confirm Password"
                        android:singleLine="true"
                        android:gravity="left"
                        android:paddingLeft="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:layout_marginTop="12dp"
                        android:layout_below="@+id/password"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_corner"/>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sendotp"
                        android:layout_marginTop="30dp"
                        android:layout_below="@+id/confirmpassword"
                        android:gravity="center"
                        android:text="Send OTP"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:onClick="onClick"
                        android:textAlignment="center"
                        android:background="@color/orange"
                        android:layout_alignLeft="@+id/mobile"
                        android:layout_alignStart="@+id/mobile"
                        android:layout_alignRight="@+id/mobile"
                        android:layout_alignEnd="@+id/mobile" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/sendotp"
                        android:id="@+id/relativeLayout2"
                        android:layout_marginTop="10sp"
                        android:layout_marginBottom="10sp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/newuser"
                            android:text="Already have an account ? "
                            android:textColor="@color/ashe"
                            android:textSize="18sp"
                            android:layout_marginTop="5sp"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="SIGN IN"
                            android:textColor="@color/colorAccentnew"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:id="@+id/login"
                            android:fontFamily="sans-serif-condensed"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/newuser"
                            android:layout_toEndOf="@+id/newuser"
                            tools:ignore="RtlHardcoded" />
                    </RelativeLayout>

                </RelativeLayout>

                <View
                    android:id="@+id/linenew"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="10sp"
                    android:layout_below="@+id/relativeLayout1"
                    android:background="#c0c0c0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/terms"
                    android:textColor="@color/ashe"
                    android:textSize="12sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="25sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/register_terms"
                    android:gravity="center"
                    android:layout_below="@+id/linenew" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@mipmap/login_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:src="@mipmap/ic_launcher_round"
            android:visibility="visible"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/msg_sit_back"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/msg_manual_otp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:hint="@string/lbl_enter_otp"
            android:textStyle="bold"
            android:textColorHint="@color/transperent"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="4"
            android:ems="9"
            android:padding="10dp"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:autofillHints="@string/lbl_enter_otp" />

        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/orange"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/lbl_submit"
            android:ems="8"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="RESEND OTP"
            android:id="@+id/resendotp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />


    </LinearLayout>

    </com.socialbeat.influencer.helper.MyViewPager>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:indeterminateTint="@color/orange"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_edit_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_edit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btn_edit_mobile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@mipmap/ic_edit_mobile"
            android:contentDescription="editmobileno" />



    </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
